--- a/assets/css/scss/_aboutUs.scss
+++ b/assets/css/scss/_aboutUs.scss
@@ -3,20 +3,14 @@
     padding-top: 60px;
     padding-bottom: 60px;
     background-color: #201F25;
-    border-bottom: 2px solid #FE690D;
-    padding-right: 200px;
-    padding-left: 200px;
+    border-bottom: 2px solid #fe0dea;
     }
-    #artkisomnou{
-        padding-right: 200px;
-        padding-left: 200px;
-    }
+
     #Abouttxt{
-        color: #FE690D;
+        color: #fe0dea;
     }
     #titreAboutUs{
-        color: #FE690D;
+        color: #fe0dea;
         text-transform: uppercase;
         font-weight: bold;
-        padding-left: 200px;
     }
