--- a/assets/css/scss/_contact.scss
+++ b/assets/css/scss/_contact.scss
@@ -1,14 +1,20 @@
 /*CSS Contact*/
-#contcontact{
-    height: 600px;
+#contcontact {
+    height: 100%;
+    background-color: #121114;
+    color: #fe0dea;
+
 }
 
-footer{
+
+footer {
     color: #d2c3be;
     background-color: #121114;
-    
+
 }
 
-#artmessage{
-    height: 200px;
+#btnsub,
+#btnres {
+    background-color: #fe0dea;
+    color: white;
 }
