--- a/assets/css/scss/_galerie.scss
+++ b/assets/css/scss/_galerie.scss
@@ -1,38 +1,12 @@
-
 /* GALERIE CSS */
-#contgalerie{
+#contgalerie {
     padding-top: 60px;
     padding-bottom: 60px;
     background-color: #201F25;
-    border-bottom: 2px solid #FE690D;
-    padding-right: 200px;
-    padding-left: 200px;
-    }
-.categorie {
-    font-family: 'Lora', serif;
-    left: 10%;
-    padding-top: 48%;
-    font: 21px;
-    box-sizing: border-box;
-    max-width: 100%;
-    color: #FE690D;
-    font-weight: bolder;
-    position: absolute;
-
+    border-bottom: 2px solid #fe0dea;
 }
 
-.architext {
-    padding-left: 10%;
-    top: 88%;
-    font-family: 'Lora', serif;
-    font: 21px;
-    box-sizing: border-box;
-    max-width: 100%;
-    color: #FE690D;
-    font-weight: bolder;
-    position: absolute;
-    z-index: 50;
-}
+
 
 /* --- IMG conteneur photo propriété dimension */
 #imgcol1 {
